--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,15 @@ prismjs:
   tab_replace: ''
 
 
+
+# 搜索功能
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
