--- a/themes/quit/_config.yml
+++ b/themes/quit/_config.yml
@@ -24,7 +24,7 @@ menus:
   home: /
   archive: /archives
   categories: /categories
-  tags: /tags
+  tags: /tags/
   # links: /links
   about: /about
   
